--- a/posts/03-Proyecto ACHIEEN/index.qmd
+++ b/posts/03-Proyecto ACHIEEN/index.qmd
@@ -53,15 +53,13 @@ ruta_digitacion_achieen <- "S:/OPERACIONES/2023/2_ece/t2/01_prueba/"
 
 El Examen Nacional de Enfermería es una prueba escrita, a la que cada Escuela de Enfermería asociada a ACHIEEN se somete voluntariamente con el propósito de evaluar los conocimientos de los futuros profesionales de enfermería.\
 
-Esta evaluación se crea con el propósito de cautelar la calidad en la formación de los egresados de Enfermería de nuestro país y se orienta en medir conocimientos  y su aplicación en situaciones clínicas.
+Esta evaluación se crea con el propósito de cautelar la calidad en la formación de los egresados de Enfermería de nuestro país y se orienta en medir conocimientos y su aplicación en situaciones clínicas.
 
 Consiste en un examen dividido en dos partes. Cada una de estas partes contiene 60 ítemes
 
-
 ::: {.callout-note title="Nota"}
-En el año 2023 se inscribieron  **X** estudiantes, de los cuales se espera que participen **Y** estudiantes. 
+En el año 2023 se inscribieron **X** estudiantes, de los cuales se espera que participen **Y** estudiantes.
 :::
-
 
 ::: {.callout-important title="Importante"}
 por problemas logísticos, en esta oportunidad, la parte 2 sólo contiene 58 preguntas.\
@@ -76,32 +74,28 @@ Para organizar la aplicación, el Área de Aplicación de Operaciones, de forma 
 
 # Recepción Material
 
-- El material aplicado es recibido en MIDE. y por el momento se ha definido extraer los sobres con las hojas de respuesta.
-- El equipo de Soporte a la Aplicación registra el folio de los sobres que han llegado y la fecha en la que los dispone en la caja desde la que ya puede ser digitado.  (Folio_sobre, fecha_entrega)
-- El equipo de soporte a la aplicación dispone los sobres en una caja para cada parte de la evaluación (parte 1 y parte 2)
-- El equipo de digitación realiza el catastro en detalle de cada uno de los sobres en un archivo excel (folio_sobre; folio_documento, fecha_registro)
-
+-   El material aplicado es recibido en MIDE. y por el momento se ha definido extraer los sobres con las hojas de respuesta.
+-   El equipo de Soporte a la Aplicación registra el folio de los sobres que han llegado y la fecha en la que los dispone en la caja desde la que ya puede ser digitado. (Folio_sobre, fecha_entrega)
+-   El equipo de soporte a la aplicación dispone los sobres en una caja para cada parte de la evaluación (parte 1 y parte 2)
+-   El equipo de digitación realiza el catastro en detalle de cada uno de los sobres en un archivo excel (folio_sobre; folio_documento, fecha_registro)
 
 # Recepción de documentos
 
 Antes de iniciar la digitación, el material debe ser inventariado.
 
-- Se dispondrán dos cajas en cuyo interior se encontrarán sobres.
-- Cada caja corresponde a una parte del proceso (parte 1 y parte 2).
-- Cada sobre contiene hojas de respuesta de una determinada unidad académica para una parte específica (1 o 2)
-- Con el lector óptico, complete en folio contenedor el folio del sobre, y en folio_documento el folio de la hoja de respuesta.
+-   Se dispondrán dos cajas en cuyo interior se encontrarán sobres.
+-   Cada caja corresponde a una parte del proceso (parte 1 y parte 2).
+-   Cada sobre contiene hojas de respuesta de una determinada unidad académica para una parte específica (1 o 2)
+-   Con el lector óptico, complete en folio contenedor el folio del sobre, y en folio_documento el folio de la hoja de respuesta.
 
-
-1. Cada miembro del equipo genera una copia del archivo excel **recepcion_achieen**.
-2. Este documento se encuentra en `r ruta_recepcion_achieen`
-   completar los siguientes campos: folio_contenedor; folio_documento y fecha_registro
-3. Una vez finalizado el registro de todos los documentos, guarde el archivo con sus iniciales y con la fecha de hoy en formato aammdd (es decir, dos caracteres para año, mes y día).
+1.  Cada miembro del equipo genera una copia del archivo excel **recepcion_achieen**.
+2.  Este documento se encuentra en `r ruta_recepcion_achieen` completar los siguientes campos: folio_contenedor; folio_documento y fecha_registro
+3.  Una vez finalizado el registro de todos los documentos, guarde el archivo con sus iniciales y con la fecha de hoy en formato aammdd (es decir, dos caracteres para año, mes y día).
 
 por ejemplo, si ud tiene el honor de llamarse Pablo Pozo e ingresó la info el 15 de noviembre del 23, nómbrelo **recepcion_achieen_pp_231115**
 
 ::: border
-**Consideraciones del registro**\ 
-En primer lugar, se tomará la caja uno y se registrará íntegramente su material.\
+**Consideraciones del registro**  En primer lugar, se tomará la caja uno y se registrará íntegramente su material.\
 Una vez foliados, los documentos deben ser devueltos a su respectivo sobre.\
 Una vez completados los sobres, estos deben ser devueltos a la caja de origen.\
 
@@ -110,7 +104,7 @@ En segundo lugar, se debe inventariar la caja 2.
 
 ![confuso?](https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaXl0cHZpcDNqdDdnMzNiYXlocnQxbWV1Y29rOHZhOW1rZHI0ZGdraiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/APqEbxBsVlkWSuFpth/giphy-downsized-large.gif)
 
-# Digitación 
+# Digitación
 
 Según sea solicitado, debe realizarse la digitación de la caja 1 o 2.
 
@@ -118,18 +112,18 @@ Según sea solicitado, debe realizarse la digitación de la caja 1 o 2.
 El primer día se iniciará con la caja 1, serán avisados cuando puedan digitarse los sobres en el formulario 2
 :::
 
-- Se extraen sobres de la caja y se distribuyen equitativamente entre los miembros de equipo.
-Se digitan en **archivo access** disponible en: `r ruta_digitacion_achieen`
+-   Se extraen sobres de la caja y se distribuyen equitativamente entre los miembros de equipo. Se digitan en **archivo access** disponible en: `r ruta_digitacion_achieen`
 
-- Se escoge formulario_1 para documentos de la caja uno\ (o bien se escoge el formulario_2 para elementos de la caja dos).
-- Se digita como si no existiera un mañana
-- Cuando se digitan todos los registros de un sobre, este se deposita en el contenedor verde
+-   Se escoge formulario_1 para documentos de la caja uno (o bien se escoge el formulario_2 para elementos de la caja dos).
+
+-   Se digita como si no existiera un mañana
+
+-   Cuando se digitan todos los registros de un sobre, este se deposita en el contenedor verde
 
 ::: {.callout-important title="Importante"}
-es muy importante que se lleve a cabo la digitación en el formulario correspondiente. \
+es muy importante que se lleve a cabo la digitación en el formulario correspondiente.\
 De lo contrario, los resultados saldrán alterados
 :::
-
 
 ## Códigos Digitación
 
@@ -143,8 +137,6 @@ De lo contrario, los resultados saldrán alterados
 | 9     | Omitida (sin elección) |
 | 7     | No aplica              |
 
-
 Ahora ya están listos. Digiten por la gloria de nuestra nación.
 
 ![digitadores](https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2ZoYnJnOXcxc29mb2UyNHozcnEyZzMwenBoY3VhNDVtZHJsbGI3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ule4vhcY1xEKQ/giphy.gif)
-
